kubernetes/frontend/deploiement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
        - name: portfolio-frontend
          image: ghcr.io/steeve-rodrigue/portfolio-frontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
