kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-svc
spec:
  selector:
    app: portfolio-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
