kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: portfolio-frontend.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-frontend-svc
                port:
                  number: 80
